🐛  Fixing overlap issue with the footer h2 and the background pattern.

--- a/css/src/style.css
+++ b/css/src/style.css
@@ -119,6 +119,7 @@ img {
 
 footer {
   h2 {
+    position: relative;
     margin: 0;
     padding: 33px;
     font-size: 20px;
